# ETL_Dashboard

./: .codecov.yml  .env.example  .env.production  .env.render  .env.vercel  .gitignore  CORS_FIX_SUMMARY.md  DOCKER_RUNNING_STATUS.md  Dockerfile.backend  Dockerfile.frontend  Dockerfile.render  GCP_DEPLOYMENT_GUIDE.md  GCP_FIX_SUMMARY.md  GITHUB_OPTIMIZATION_PLAN.md  ISSUES_FIXED_SUMMARY.md  LICENSE  LOCAL_DEV_GUIDE.md  Makefile  PERFORMANCE_COMPLETE.md  PERFORMANCE_OPTIMIZATION.md  README.md  RENDER_DEPLOY.md  TIMER_REMOVAL_SUMMARY.md  VERCEL_DEPLOY.md  deploy-frontend-gcp.sh  deploy-gcp.sh  docker-compose.portainer.yml  docker-compose.swarm.yml  docker-compose.test.yml  docker-compose.yml  docker-init.sh  index-local.html  package.json  pyproject.toml  render.yaml  requirements-full.txt  requirements-minimal.txt  requirements-vercel.txt  requirements.txt  run_local_dev.py  (+8 more)
.github/: dependabot.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: python-app.yml
api/: files.py  health.py  index.py  preview.py  profile.py  test-styling.py  test-upload.py  transform.py  upload.py
backend/: main.py
backend/api/: routes_preview.py  routes_profile.py  routes_transform.py  routes_upload.py
backend/core/: config.py  logging.py  performance.py
backend/models/: schemas.py
backend/services/: cleaning.py  dax_generator.py  excel_reader.py  masterbom_rules.py  pipeline_service.py  powerbi_integration.py  profiler.py  status_processor_v2.py  status_rules.py  storage.py
data/pipeline_output/: dim_dates.csv  dim_dates.parquet  fact_parts.csv  fact_parts.parquet  masterbom_clean.csv  masterbom_clean.parquet  plant_item_status.parquet
data/processed/: data_dictionary.md
docs/: status_sheet_functionality.md
frontend/: app.py
frontend/static/css/: styles.css
frontend/static/js/: app.js
frontend/templates/: base.html  index.html  preview.html  profile.html  results.html
powerbi/: data_dictionary.md  measures_dax.md  power_query_connectors.md
powerbi/templates/: ETL_Dashboard_Template.json  ETL_Dashboard_Template.pbit  template_config.json
tests/: conftest.py  test_api_integration.py  test_cleaning.py  test_enhanced_plant_status.py  test_masterbom_rules.py  test_profiler.py
