[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "etl-dashboard"
description = "ETL Dashboard for data processing and visualization"
readme = "README.md"
license = {file = "LICENSE"}
authors = [
    {name = "Saad", email = "saad@example.com"}
]
keywords = ["etl", "dashboard", "data-processing", "fastapi", "flask"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
requires-python = ">=3.9"

[project.urls]
Homepage = "https://github.com/Storbiic/ETL_Dashboard"
Repository = "https://github.com/Storbiic/ETL_Dashboard"
Documentation = "https://github.com/Storbiic/ETL_Dashboard#readme"
"Bug Tracker" = "https://github.com/Storbiic/ETL_Dashboard/issues"